test_case/rust-lang_rust/87337_885319893_16.rs
rust,testharness
LL | | //~^ ERROR
LL | | //! let x = 12;
LL | | //! 